removed marks from unit test

--- a/.github/workflows/mlflow_ci.yml
+++ b/.github/workflows/mlflow_ci.yml
@@ -46,4 +46,4 @@ jobs:
 
       - name: Test deployed model
         run: |
-          pytest -m api -x tests/test_api.py
+          pytest -x tests/test_api.py
